actions are now loaded from a map of properties instead of a section