@@ -1,8 +1,8 @@
 package com.github.syr0ws.craftventory.internal.config.yaml.action;
 
+import com.github.syr0ws.crafter.config.ConfigurationMap;
 import com.github.syr0ws.craftventory.api.config.exception.InventoryConfigException;
 import com.github.syr0ws.craftventory.common.config.yaml.YamlCommonActionLoader;
-import org.bukkit.configuration.ConfigurationSection;
 
 import java.util.List;
 
@@ -10,13 +10,13 @@ public abstract class YamlCommandActionLoader extends YamlCommonActionLoader {
 
     private static final String COMMANDS_KEY = "commands";
 
-    protected List<String> loadCommands(ConfigurationSection section) throws InventoryConfigException {
+    protected List<String> loadCommands(ConfigurationMap map) throws InventoryConfigException {
 
-        if (!section.isList(COMMANDS_KEY)) {
-            throw new InventoryConfigException(String.format("Property '%s.%s' not found or is not a list", COMMANDS_KEY, section.getCurrentPath()));
+        if (!map.isList(COMMANDS_KEY)) {
+            throw new InventoryConfigException("Property '%s' not found or is not a list for action '%s' at '%s'".formatted(COMMANDS_KEY, this.getName(), map.getCurrentPath()));
         }
 
-        return section.getStringList(COMMANDS_KEY).stream()
+        return map.getStringList(COMMANDS_KEY).stream()
                 .map(command -> command.startsWith("/") ? command.substring(1) : command)
                 .toList();
     }
