@@ -1,12 +1,12 @@
 package com.github.syr0ws.craftventory.internal.config.yaml.action;
 
+import com.github.syr0ws.crafter.config.ConfigurationMap;
 import com.github.syr0ws.craftventory.api.config.exception.InventoryConfigException;
 import com.github.syr0ws.craftventory.api.inventory.action.ClickAction;
 import com.github.syr0ws.craftventory.api.inventory.action.ClickType;
 import com.github.syr0ws.craftventory.common.config.yaml.YamlCommonActionLoader;
 import com.github.syr0ws.craftventory.common.inventory.action.SoundAction;
 import org.bukkit.Sound;
-import org.bukkit.configuration.ConfigurationSection;
 
 import java.util.Set;
 
@@ -17,56 +17,56 @@ public class YamlSoundActionLoader extends YamlCommonActionLoader {
     private static final String PITCH_KEY = "pitch";
 
     @Override
-    public ClickAction load(ConfigurationSection section) throws InventoryConfigException {
+    public ClickAction load(ConfigurationMap map) throws InventoryConfigException {
 
-        Set<ClickType> clickTypes = super.loadClickTypes(section);
-        Sound sound = this.loadSound(section);
-        float volume = this.loadVolume(section);
-        float pitch = this.loadPitch(section);
+        Set<ClickType> clickTypes = super.loadClickTypes(map);
+        Sound sound = this.loadSound(map);
+        float volume = this.loadVolume(map);
+        float pitch = this.loadPitch(map);
 
         return new SoundAction(clickTypes, sound, volume, pitch);
     }
 
-    private Sound loadSound(ConfigurationSection section) throws InventoryConfigException {
+    private Sound loadSound(ConfigurationMap map) throws InventoryConfigException {
 
-        if (!section.isString(SOUND_KEY)) {
-            throw new InventoryConfigException(String.format("Property '%s.%s' missing or is not a string", section.getCurrentPath(), VOLUME_KEY));
+        if (!map.isString(SOUND_KEY)) {
+            throw new InventoryConfigException("Property '%s' not found or is not a string for action '%s' at '%s'".formatted(SOUND_KEY, this.getName(), map.getCurrentPath()));
         }
 
-        String soundName = section.getString(SOUND_KEY);
+        String soundName = map.getString(SOUND_KEY);
 
         try {
             return Sound.valueOf(soundName);
         } catch (IllegalArgumentException exception) {
-            throw new InventoryConfigException(String.format("Invalid sound '%s' at '%s.%s'", soundName, section.getCurrentPath(), SOUND_KEY));
+            throw new InventoryConfigException("Invalid sound '%s' for action '%s' at '%s'".formatted(soundName, this.getName(), map.getCurrentPath()));
         }
     }
 
-    private float loadVolume(ConfigurationSection section) throws InventoryConfigException {
+    private float loadVolume(ConfigurationMap map) throws InventoryConfigException {
 
-        if (!section.isDouble(VOLUME_KEY)) {
-            throw new InventoryConfigException(String.format("Property '%s.%s' missing or is not a float", section.getCurrentPath(), VOLUME_KEY));
+        if (!map.isDouble(VOLUME_KEY)) {
+            throw new InventoryConfigException("Property '%s' not found or is not a double for action '%s' at '%s'".formatted(VOLUME_KEY, this.getName(), map.getCurrentPath()));
         }
 
-        float volume = (float) section.getDouble(VOLUME_KEY);
+        float volume = (float) map.getDouble(VOLUME_KEY);
 
         if (volume < 0f) {
-            throw new InventoryConfigException(String.format("Volume at '%s.%s' cannot be negative", section.getCurrentPath(), VOLUME_KEY));
+            throw new InventoryConfigException("Volume cannot be negative for action '%s' at '%s'".formatted(this.getName(), map.getCurrentPath()));
         }
 
         return volume;
     }
 
-    private float loadPitch(ConfigurationSection section) throws InventoryConfigException {
+    private float loadPitch(ConfigurationMap map) throws InventoryConfigException {
 
-        if (!section.isDouble(PITCH_KEY)) {
-            throw new InventoryConfigException(String.format("Property '%s.%s' missing or is not a float", section.getCurrentPath(), VOLUME_KEY));
+        if (!map.isDouble(PITCH_KEY)) {
+            throw new InventoryConfigException("Property '%s' not found or is not a double for action '%s' at '%s'".formatted(PITCH_KEY, this.getName(), map.getCurrentPath()));
         }
 
-        float pitch = (float) section.getDouble(PITCH_KEY);
+        float pitch = (float) map.getDouble(PITCH_KEY);
 
         if (pitch < 0f || pitch > 2f) {
-            throw new InventoryConfigException(String.format("Pitch at '%s.%s' cannot be negative or greater than 2", section.getCurrentPath(), VOLUME_KEY));
+            throw new InventoryConfigException("Pitch cannot be negative or greater than 2 for action '%s' at '%s'".formatted(this.getName(), map.getCurrentPath()));
         }
 
         return pitch;
